--- a/build.gradle
+++ b/build.gradle
@@ -4,3 +4,23 @@
  * This is a general purpose Gradle build.
  * Learn how to create Gradle builds at https://guides.gradle.org/creating-new-gradle-builds/
  */
+
+apply plugin: 'java'
+
+ext {
+    springRestdocsVersion = '1.2.3.RELEASE'
+}
+
+group = 'io.github.joemccall86'
+version = '0.1-SNAPSHOT'
+
+repositories {
+    jcenter()
+}
+
+dependencies {
+    compile "org.springframework.restdocs:spring-restdocs-core:${springRestdocsVersion}"
+    compile 'commons-io:commons-io:2.5'
+    compile 'commons-fileupload:commons-fileupload:1.3.1'
+    compileOnly 'javax.servlet:javax.servlet-api:3.1.0'
+}
