--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,8 @@
  */
 
 apply plugin: 'java'
+apply plugin: 'maven'
+apply plugin: 'maven-publish'
 
 ext {
     springRestdocsVersion = '1.2.3.RELEASE'
@@ -23,4 +25,20 @@ dependencies {
     compile 'commons-io:commons-io:2.5'
     compile 'commons-fileupload:commons-fileupload:1.3.1'
     compileOnly 'javax.servlet:javax.servlet-api:3.1.0'
+}
+
+task sourceJar(type: Jar) {
+    from sourceSets.main.allJava
+}
+
+publishing {
+    publications {
+        mavenJava(MavenPublication) {
+            from components.java
+
+            artifact sourceJar {
+                classifier 'sources'
+            }
+        }
+    }
 }
