--- a/samples/rest-notes-spring-data-rest/pom.xml
+++ b/samples/rest-notes-spring-data-rest/pom.xml
@@ -18,8 +18,8 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<java.version>1.8</java.version>
-		<spring-restdocs.version>1.2.3.RELEASE</spring-restdocs.version>
-		<!--<spring-restdocs.version>2.0.1.BUILD-SNAPSHOT</spring-restdocs.version>-->
+		<!--<spring-restdocs.version>1.2.3.RELEASE</spring-restdocs.version>-->
+		<spring-restdocs.version>2.0.1.BUILD-SNAPSHOT</spring-restdocs.version>
 	</properties>
 
 	<dependencies>
@@ -56,7 +56,7 @@
 		<dependency>
 			<groupId>io.github.joemccall86</groupId>
 			<artifactId>spring-restdocs-resttemplate</artifactId>
-			<version>0.1</version>
+			<version>0.2.0</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
