--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,8 +6,8 @@ jobs:
     steps:
       - checkout
       - run:
-          name: Build archive
-          command: ./gradlew build
+          name: Build archive & publish locally
+          command: ./gradlew build publishToMavenLocal
       - run:
           name: Test Rest Notes Grails Sample
           command: cd samples/rest-notes-grails && ./gradlew integrationTest
